# CoderBots

./: .gitignore  README.md  amr_example.ipynb  app.py  client.js  component_example.js  component_example.py  example.ipynb  example_client.ipynb  example_ppo_simple_quadruped.py  example_simple_quadruped.py  flappy_example.ipynb  frogger_example.ipynb  index.html  index.js  lidar_module.py  mazerunner_example.ipynb  mountain_car_example.ipynb  preview_map.py  pyproject.toml  requirements.txt  rest_app.py  rest_client.py  rest_notebook_example.ipynb  rest_requirements.txt  simple_client.js  simple_client.py  simple_notebook_example.ipynb  simple_requirements.txt  test_walk_gait.ipynb  topdown_driving_example.ipynb
.github/: copilot-instructions.md
.github/workflows/: deploy.yml  python-publish.yml
coderbot_package/: README.md  __init__.py  lidar_module.py  simple_client.py
coderbot_package/assets/: rotate.js
coderbot_package/maps/: loader.py  rect_triangle_map.json  triangle_room.json
coderbot_package/templates/: index.html
coderbot_sim/: __init__.py  _tk_base.py  example_maps.py  sim.js  styles.css  test.ipynb
coderbot_sim/flappy/: __init__.py  sim.js  tk.py  widget.py
coderbot_sim/frogger/: tk.py
coderbot_sim/maze_runner/: __init__.py  sim.js  tk.py  widget.py
coderbot_sim/mountain_car/: tk.py
coderbot_sim/topdown_driving/: __init__.py  tk.py  track_0.json
coderbot_sim_warp/cart_pole/: __init__.py
coderbot_sim_warp/quadruped/: __init__.py
coderbot_sim_warp/robot_dog/: __init__.py  gait.py
coderbot_sim_warp/simple_quadruped/: __init__.py
tinysim/topdown_driving/: widget.py
