[project]
name = "coderbots"
version = "0.0.1"
description = "starting robotics with simple simulation environments"
authors = [
    {name = "Matthew Taylor", email = "matthew.taylor.andre@gmail.com"},
]

contributors = []

dependencies = [
    "box2d-py",
    "anywidget"
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"