[project]
name = "coderbot-sim"
version = "0.0.8"
description = "starting robotics with simple simulation environments"
authors = [
    {name = "Matthew Taylor", email = "matthew.taylor.andre@gmail.com"},
]

dependencies = [
    "numpy",
    "anywidget",
    "jupyter-ui-poll"
]

[project.optional-dependencies]
warp = ["warp-lang==1.8.1"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["coderbot_sim", "coderbot_sim_warp"]
include-package-data = true

[tool.setuptools.package-data]
coderbot_sim = ["**/*"]
coderbot_sim_warp = ["**/*"]


